# MAD-TD

./: .gitignore  README.md  pyproject.toml  requirements.tx  setup.py
config/: main.yaml
config/algo/: base_mad_td.yaml
config/env/: aux_rew_test.yaml  dmc.yaml  maniskill.yaml  myosuite.yaml
config/logger/: default.yaml  wandb.yaml
config/models/: residual_model_based.yaml  residual_model_free.yaml  td_mpc2.yaml  td_mpc2_bigger.yaml  td_mpc2_model_free.yaml
config/train/: crossent_byol_vaml.yaml  debug.yaml  no_vaml.yaml
mad_td/: __init__.py  main.py  rl_types.py
mad_td/cfgs/: __init__.py  data_config.py  mad_td_config.py  train_config.py
mad_td/data/: env.py  image_preprocessing.py  replay_buffer.py
mad_td/model_util/: model_loss_functions.py
mad_td/nn/: actor.py  common.py  critic.py  model.py
mad_td/rl_util/: rl_targets.py
mad_td/tests/: c51_projection.py  categorical_regression.py  flax_inheritance.py  flax_jit.py  flax_variables.py  image_aug.py  init_comparison.py  jax_func.py  maniskill.py
mad_td/trainers/: mad_td_model.py  trainers.py
mad_td/update_functions/: actor_updates.py  critic_updates.py  mad_td_update.py  model_updates.py
mad_td/utils/: adversarial.py  checkpointing.py  eval_utils.py  jax.py  logging.py
